# rust-course

./: Cargo.toml
combo/: Cargo.toml
combo/src/: main.rs
doctests_exercise/src/: lib.rs
dump/: Cargo.toml
dump/src/: main.rs
examples-testable/: Cargo.toml
examples-testable/src/: actor.rs  avg_collection.rs  box_errors.rs  ch_oneshot.rs  closure.rs  declarative_macro_con_list.rs  declarative_macro_vec.rs  group_iterator.rs  iterator_fib.rs  iterators_2.rs  iterators_3.rs  lib.rs  my_vec.rs  once_cell.rs  proptest.rs  spinlock.rs  strtok.rs  unit_test.rs  vec_macro.rs
heapsize/example-use-of-heapsize/: Cargo.toml
heapsize/example-use-of-heapsize/src/: main.rs
heapsize/heapsize-lib/: Cargo.toml
heapsize/heapsize-lib/src/: lib.rs
lib/: Cargo.toml
lib/src/: avg_collection.rs  box_errors.rs  declarative_macro_1.rs  declarative_macro_2.rs  declarative_macro_fib.rs  iterator_fib.rs  lib.rs  my_box.rs  unit_test.rs
src/: a.rs  arc.rs  as_ref.rs  body.rs  borrowing.rs  car.rs  channel.rs  curry.rs  declarative_macro_fib.rs  dining_philosophers.rs  enum.rs  fib_macro.rs  file_size.rs  file_size_formatter.rs  full_name.rs  group_iterator.rs  iterator.rs  messaging.rs  messaging2.rs  messaging3.rs  mini_tokio.rs  person.rs  rc_count.rs  read_files.rs  recur_seq_gen_macro.rs  result_type.rs  shape.rs  spin_lock.rs  string.rs  string_slice.rs  threads.rs  threads3.rs  trait_bounds.rs  unit_tests.rs  user.rs  vector.rs  vector_elements.rs  word_count.rs
strcan/: Cargo.toml  test_nis.nix  test_nix.nix
strcan/src/: main.rs
