[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]] 
name = "file_size_formatter"
path = "src/file_size_formatter.rs"

[[bin]] 
name = "full_name"
path = "src/full_name.rs"

[[bin]] 
name = "read_files"
path = "src/read_files.rs"

[[bin]] 
name = "trait_bounds"
path = "src/trait_bounds.rs"

[[bin]] 
name = "iterator"
path = "src/iterator.rs"

[[bin]] 
name = "group_iterator"
path = "src/group_iterator.rs"

[[bin]] 
name = "person"
path = "src/person.rs"

[[bin]] 
name = "user"
path = "src/user.rs"

[[bin]] 
name = "module_visibility"
path = "src/module_visibility.rs"

[[bin]] 
name = "modules"
path = "src/modules.rs"

[[bin]] 
name = "result_type"
path = "src/result_type.rs"

[[bin]]
name = "string"
path = "src/string.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"

[[bin]]
name = "vector_elements"
path = "src/vector_elements.rs"

[[bin]]
name = "shape"
path = "src/shape.rs"

[[bin]]
name = "string_slice"
path = "src/string_slice.rs"

[[bin]]
name = "word_count"
path = "src/word_count.rs"

# [[bin]]
# name = "hashmaps"
# path = "src/hashmaps.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "messaging"
path = "src/messaging.rs"

[[bin]]
name = "messaging2"
path = "src/messaging2.rs"

[[bin]]
name = "messaging3"
path = "src/messaging3.rs"

[[bin]]
name = "dining_philosophers"
path = "src/dining_philosophers.rs"

[[bin]]
name = "rc_count"
path = "src/rc_count.rs"

[[bin]]
name = "threads3"
path = "src/threads3.rs"

[[bin]]
name = "curry"
path = "src/curry.rs"

[[bin]]
name = "fib_macro"
path = "src/fib_macro.rs"