[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
once_cell = "1.19.0"
serde_json = "1.0.117"
stream-cancel = "0.8.2"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util = { version = "0.7.11", features = ["rt"] }

[[bin]]
name = "async_stream_map"
path = "src/async_stream_map.rs"

[[bin]]
name = "async_stream_transformation"
path = "src/async_stream_transformation.rs"

[[bin]]
name = "channel"
path = "src/channel.rs"

[[bin]]
name = "curry"
path = "src/curry.rs"

[[bin]] 
name = "file_size_formatter"
path = "src/file_size_formatter.rs"

[[bin]] 
name = "mini_tokio"
path = "src/mini_tokio.rs"

[[bin]]
name = "recur_seq_gen_macro"
path = "src/recur_seq_gen_macro.rs"

[[bin]]
name = "spin_lock"
path = "src/spin_lock.rs"

[[bin]]
name = "string_slice"
path = "src/string_slice.rs"

# [[bin]] 
# name = "read_files"
# path = "src/read_files.rs"

[[bin]] 
name = "trait_bounds"
path = "src/trait_bounds.rs"

# [[bin]] 
# name = "person"
# path = "src/person.rs"

[[bin]] 
name = "user"
path = "src/user.rs"

[[bin]]
name = "vector"
path = "src/vector.rs"

[[bin]]
name = "vector_elements"
path = "src/vector_elements.rs"

[[bin]]
name = "word_count"
path = "src/word_count.rs"

# [[bin]]
# name = "hashmaps"
# path = "src/hashmaps.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "dining_philosophers"
path = "src/dining_philosophers.rs"

[[bin]]
name = "rc_count"
path = "src/rc_count.rs"

[[bin]]
name = "threads3"
path = "src/threads3.rs"
